Added backend task creation test

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
       "install-frontend": "cd frontend && npm install",
       "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
       "start-backend": "cd backend && node server.js",
-      "start-frontend": "cd frontend && npm run serve"
+      "start-frontend": "cd frontend && npm run serve",
+      "test": "cd backend && npx jest"
     },
     "keywords": ["task", "manager", "vue", "node"],
     "author": "",
