--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,14 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-      "start": "node server.js"
+        "start": "node server.js"
     },
     "dependencies": {
-      "express": "^4.17.1",
-      "cors": "^2.8.5"
+        "cors": "^2.8.5",
+        "express": "^4.17.1"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.5.14",
+        "jest": "^29.7.0"
     }
-  }
+}
