--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
       "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
       "start-backend": "cd backend && node server.js",
       "start-frontend": "cd frontend && npm run serve",
-      "test": "cd backend && npx jest"
+      "test": "cd backend && npx jest -i"
     },
     "keywords": ["task", "manager", "vue", "node"],
     "author": "",
